k8s/ingress/product-mgmt-ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: product-mgmt-ingress
  namespace: product-mgmt
  # annotations:
    # nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: barbosanet
      http:
        paths:
          - path: /product-mgmt
            pathType: Prefix
            backend:
              service:
                name: product-mgmt-svc
                port:
                  number: 9090
